--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Home</li>
-        <li>About</li>
-      </ul>
-    </nav>
-    <script src="app.js"></script>
-  </body>
+<html lang="en" class="no-js">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bee</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  <div class="bee"> 
+    <div class="booty"></div>
+    <div class="wing-left"></div>
+    <div class="wing-right"></div>
+    <div class="face">
+      <div class="eyes"></div>
+      <div class="mouth"></div>
+    </div>
+  </div>
+  <div class="cloud1"></div>
+  <div class="cloud2"></div>
+  <div class="cloud3"></div>
+</body>
 </html>
